--- a/res/layout/rhybudd_home.xml
+++ b/res/layout/rhybudd_home.xml
@@ -1,7 +1,8 @@
 
-    <RelativeLayout android:layout_width="fill_parent"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/background_gradient_2" xmlns:android="http://schemas.android.com/apk/res/android">
+        android:background="@drawable/background_gradient_3" >
 
 <ListView
     android:id="@+id/ZenossEventsList"
