--- a/res/drawable-hdpi/event_fragment_border_reverse.xml
+++ b/res/drawable-hdpi/event_fragment_border_reverse.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 	<gradient 
-        android:startColor="@color/ZenossLightBlack" 
-        android:endColor="@color/RhybuddOffWhite"
-        android:angle="0"
+        android:startColor="@color/ZenossDarkBlack" 
+        android:endColor="@color/RhybuddWhite"
+        android:angle="180"
         android:tileMode="repeat" 
         android:dither="true"
      />
