--- a/res/layout/view_zenoss_event_fragment.xml
+++ b/res/layout/view_zenoss_event_fragment.xml
@@ -1,16 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relativeLayout2"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-    
+    android:layout_height="fill_parent"
+    android:background="@color/RhybuddOffWhite" >
+    
     <View
         android:id="@+id/Background"
-        android:layout_width="8dp"
+        android:layout_width="4dp"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/event_fragment_border" />
-
+        android:background="@drawable/event_fragment_border"
+        android:visibility="visible" />
+
     <TextView
         android:id="@+id/EventTitle"
         android:layout_width="wrap_content"
@@ -18,16 +20,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="8dp"
-        android:shadowColor="#505050"
+        android:shadowColor="@color/RhybuddTextShadow"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1"
         android:text="Title"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/RhybuddTitleText"
         android:textStyle="bold" >
 
 </TextView>
-
+
     <TextView
         android:id="@+id/ComponantLabel"
         android:layout_width="wrap_content"
@@ -35,16 +38,13 @@
         android:layout_alignLeft="@+id/EventTitle"
         android:layout_alignParentLeft="false"
         android:layout_below="@+id/EventTitle"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="@string/eventDetailsComponentLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddDarkText"
         android:textStyle="bold" >
 
 </TextView>
-
+
     <TextView
         android:id="@+id/Componant"
         android:layout_width="wrap_content"
@@ -52,15 +52,12 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/ComponantLabel"
         android:layout_marginLeft="12dp"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="TextView"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#FFFFFF" >
+        android:textColor="@color/RhybuddStdText" >
+
 </TextView>
-
+
     <TextView
         android:id="@+id/EventClassLabel"
         android:layout_width="wrap_content"
@@ -68,17 +65,25 @@
         android:layout_alignLeft="@+id/EventTitle"
         android:layout_alignParentLeft="false"
         android:layout_below="@+id/Componant"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="@string/eventDetailsEventClassLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddDarkText"
         android:textStyle="bold" >
 
 </TextView>
-    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/EventClassLabel" android:layout_alignLeft="@+id/Componant" android:id="@+id/EventClass" android:textColor="#FFFFFF" android:shadowColor="#505050" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"></TextView>
-
+
+    <TextView
+        android:id="@+id/EventClass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/Componant"
+        android:layout_below="@+id/EventClassLabel"
+        android:text="TextView"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/RhybuddStdText" >
+
+</TextView>
+
     <TextView
         android:id="@+id/SummaryLabel"
         android:layout_width="wrap_content"
@@ -86,17 +91,25 @@
         android:layout_alignLeft="@+id/EventTitle"
         android:layout_alignParentLeft="false"
         android:layout_below="@+id/EventClass"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="@string/eventDetailsSummaryLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddDarkText"
         android:textStyle="bold" >
 
 </TextView>
-    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/SummaryLabel" android:layout_alignLeft="@+id/EventClass" android:id="@+id/Summary" android:textColor="#FFFFFF" android:shadowColor="#505050" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"></TextView>
-
+
+    <TextView
+        android:id="@+id/Summary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/EventClass"
+        android:layout_below="@+id/SummaryLabel"
+        android:text="TextView"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/RhybuddStdText" >
+
+</TextView>
+
     <TextView
         android:id="@+id/StartTimeLabel"
         android:layout_width="wrap_content"
@@ -105,16 +118,13 @@
         android:layout_alignParentLeft="false"
         android:layout_below="@+id/Summary"
         android:layout_marginTop="24dp"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="@string/eventDetailsFirstSeenLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddDarkText"
         android:textStyle="bold" >
 
 </TextView>
-
+
     <TextView
         android:id="@+id/EndTimeLabel"
         android:layout_width="wrap_content"
@@ -122,18 +132,40 @@
         android:layout_alignLeft="@+id/EventTitle"
         android:layout_alignParentLeft="false"
         android:layout_below="@+id/StartTimeLabel"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="@string/eventDetailslastSeenLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddDarkText"
         android:textStyle="bold" >
 
 </TextView>
-    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/FirstTime" android:text="...." android:layout_toRightOf="@+id/StartTimeLabel" android:layout_alignBaseline="@+id/StartTimeLabel" android:layout_marginLeft="8dp" android:shadowColor="#505050" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"></TextView>
-    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EndTimeLabel" android:layout_alignBottom="@+id/EndTimeLabel" android:id="@+id/LastTime" android:text="...." android:layout_toRightOf="@+id/EndTimeLabel" android:layout_marginLeft="11dp" android:shadowColor="#505050" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"></TextView>
-
+
+    <TextView
+        android:id="@+id/FirstTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/StartTimeLabel"
+        android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@+id/StartTimeLabel"
+        android:text="...."
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddStdText" >
+
+</TextView>
+
+    <TextView
+        android:id="@+id/LastTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/EndTimeLabel"
+        android:layout_alignBottom="@+id/EndTimeLabel"
+        android:layout_marginLeft="11dp"
+        android:layout_toRightOf="@+id/EndTimeLabel"
+        android:text="...."
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddStdText" >
+
+</TextView>
+
     <TextView
         android:id="@+id/EventCountLabel"
         android:layout_width="wrap_content"
@@ -142,17 +174,27 @@
         android:layout_alignParentLeft="false"
         android:layout_below="@+id/EndTimeLabel"
         android:layout_marginTop="8dp"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="@string/eventDetailsEventCountLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddDarkText"
         android:textStyle="bold" >
 
 </TextView>
-    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/EventCountLabel" android:layout_alignBottom="@+id/EventCountLabel" android:layout_toRightOf="@+id/EventCountLabel" android:id="@+id/EventCount" android:text="0" android:layout_marginLeft="20dp" android:shadowColor="#505050" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"></TextView>
-
+
+    <TextView
+        android:id="@+id/EventCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/EventCountLabel"
+        android:layout_alignBottom="@+id/EventCountLabel"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/EventCountLabel"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddStdText" >
+
+</TextView>
+
     <TextView
         android:id="@+id/AgentLabel"
         android:layout_width="wrap_content"
@@ -161,16 +203,26 @@
         android:layout_alignParentLeft="false"
         android:layout_below="@+id/EventCountLabel"
         android:layout_marginTop="8dp"
-        android:shadowColor="#505050"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
         android:text="@string/eventDetailsAgentLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddDarkText"
         android:textStyle="bold" >
 
 </TextView>
-    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/AgentLabel" android:layout_alignBottom="@+id/AgentLabel" android:layout_toRightOf="@+id/AgentLabel" android:id="@+id/Agent" android:text="unknown" android:layout_marginLeft="20dp" android:shadowColor="#505050" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"></TextView>
+
+    <TextView
+        android:id="@+id/Agent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/AgentLabel"
+        android:layout_alignBottom="@+id/AgentLabel"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/AgentLabel"
+        android:text="unknown"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/RhybuddStdText" >
+
+</TextView>
 
     <LinearLayout
         android:id="@+id/ButtonHolder"
