--- a/res/layout-land/view_zenoss_device3.xml
+++ b/res/layout-land/view_zenoss_device3.xml
@@ -2,14 +2,14 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:background="@drawable/background_view_device"
         android:gravity="center_vertical|center_horizontal" >
-
+
 	<RelativeLayout
 	    xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:id="@+id/viewDeviceContainer"
 	    android:layout_width="wrap_content"
-	    android:layout_height="fill_parent"
-	    android:background="#FFFFFF" >
+	    android:layout_height="fill_parent" >
 
     <RelativeLayout
         android:id="@+id/GeneralDetailsGrid"
