--- a/res/layout/rhybudd_home.xml
+++ b/res/layout/rhybudd_home.xml
@@ -3,14 +3,14 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@drawable/background_gradient_3" >
-
+
 <ListView
     android:id="@+id/ZenossEventsList"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
-    android:cacheColorHint="#929ba4" >
+    android:cacheColorHint="@color/RhybuddWhite" >
 
 </ListView>
 <ProgressBar
@@ -20,13 +20,13 @@
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true" />
-
+
 <ImageView
     android:id="@+id/imageView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
-    android:src="@drawable/zenoss" />
+    android:src="@drawable/zenoss_3" />
 
     </RelativeLayout>
