--- a/res/layout/zenoss_event_listitem.xml
+++ b/res/layout/zenoss_event_listitem.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relativeLayout1"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:minHeight="64dp" >
 
     <ImageView
         android:id="@+id/fragment_indicator"
